--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+html, body, #root {
+  height: 100%
+}
+
+.headroom-wrapper {
+  height: 60px !important;
+}
+.text-danger {
+  color: #dc3545;
+}
