--- a/src/UI/css/Error.css
+++ b/src/UI/css/Error.css
@@ -1,4 +1,3 @@
-
 #notfound .notfound {
     position: absolute;
     left: 50%;
@@ -6,6 +5,10 @@
     -webkit-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%)
+}
+
+#notfound {
+    height: 100vh;
 }
 
 .notfound {
